商客字典及其他修改17-3-17

--- a/app/22busscustomer/views/addintegralgoods.html
+++ b/app/22busscustomer/views/addintegralgoods.html
@@ -93,7 +93,7 @@
  <div class="form-group">
  <label for="inputDate" class="col-sm-4 control-label">积分：</label>
  <div class="col-md-6">
- <input type="text" class="form-control" id="inputpoolname"
+ <input type="number" class="form-control" id="inputpoolname"
       ng-model="info.integral"
       >
  </div>    
@@ -112,7 +112,7 @@
  <div class="form-group">
   <label for="inputDate" class="col-sm-4 control-label">库存：</label>
   <div class="col-md-6">
- <input type="text" class="form-control" id="inputpoolname" placeholder=""
+ <input type="number" class="form-control" id="inputpoolname" placeholder=""
       ng-model="info.integra_num"
       >
  </div>
