--- a/app/22busscustomer/views/addprize.html
+++ b/app/22busscustomer/views/addprize.html
@@ -51,7 +51,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">允许最大参与人数</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入允许最大参与人数"
+							<input type="number" class="form-control" placeholder="请输入允许最大参与人数"
 							ng-model="info.allowableNumber"
 							>
 						</div>
@@ -95,7 +95,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">奖品总数量</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入奖品总数量"
+							<input type="number" class="form-control" placeholder="请输入奖品总数量"
 							ng-model="info.totalnum"
 							>
 						</div>
@@ -104,7 +104,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">虚拟参与人数</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入虚拟参与人数"
+							<input type="number" class="form-control" placeholder="请输入虚拟参与人数"
 							ng-model="info.fictitious_participate_num"
 							>
 						</div>
