--- a/app/22busscustomer/views/instructionlist.html
+++ b/app/22busscustomer/views/instructionlist.html
@@ -5,8 +5,9 @@
             <div class="col-sm-12">
                   <label for="inputLottry" class="control-label">说明列表</label>
                   <button type="button" class="btn btn-primary search pull-right" ng-click="addinstruction()">添加说明</button>
-
-
+                  <input type="text" class="form-control" ng-model="somepara.title_identifier" placeholder="标识">&nbsp;&nbsp;
+                  <input type="text" class="form-control" ng-model="somepara.title" placeholder="标题">&nbsp;&nbsp;
+                  <button type="button" class="btn btn-primary" ng-click="search()">搜索</button>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
         </div>
     </div>
