--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -520,9 +520,10 @@
 	  	<div class="form-group">
 			<label class="col-sm-3 col-xs-12 control-label">团产品-预定须知</label>
 			<div class="col-sm-9 col-xs-12">
-				<textarea class="form-control" rows="3"
+				<!-- <textarea class="form-control" rows="3"
 				ng-model="saleobj.bookingnotes"
-				></textarea>
+				></textarea> -->
+				<div text-angular ng-model="saleobj.bookingnotes"></div>
 			</div>
 		</div>
 
