--- a/app/22busscustomer/views/vouchersalecreate.html
+++ b/app/22busscustomer/views/vouchersalecreate.html
@@ -248,9 +248,10 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">销售品简介</label>
 						<div class="col-xs-9">
-							<textarea class="form-control" rows="3"
+							<!-- <textarea class="form-control" rows="3"
 							ng-model="obj.content"
-							></textarea>
+							></textarea> -->
+							<div text-angular ng-model="obj.content"></div>
 						</div>
 					</div>
 
