--- a/app/22busscustomer/views/addinstruction.html
+++ b/app/22busscustomer/views/addinstruction.html
@@ -20,7 +20,22 @@
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
       ng-model="saveinfo.title"
       >
- </div>    
+ </div>
+ </div>
+
+ <div class="form-group">
+ <label for="inputDate" class="col-sm-2 control-label">类型</label>
+ <div class="col-md-9">
+ <!-- <input type="text" class="form-control" id="inputpoolname" placeholder=""
+      ng-model="saveinfo.type"
+      > -->
+    <select class="form-control" ng-model="saveinfo.type">
+      <option value="">请选择</option>
+      <option value="0">常见问题</option>
+      <option value="1">其他</option>  
+      <option value="2">问题分类</option>
+    </select>
+ </div>
  </div>
 
  <div class="form-group">
