--- a/app/22busscustomer/views/creatbargain.html
+++ b/app/22busscustomer/views/creatbargain.html
@@ -75,11 +75,12 @@
 
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-4 control-label">活动说明：</label>
- <div class="col-md-6">
- <input type="text" class="form-control" id="inputpoolname" placeholder=""
+ <label for="inputDate" class="col-sm-2 control-label">活动说明：</label>
+ <div class="col-md-9">
+ <!-- <input type="text" class="form-control" id="inputpoolname" placeholder=""
       ng-model="info.description"
-      >
+      > -->
+  <div text-angular ng-model="info.description"></div>
  </div>    
  </div>
 
