--- a/app/22busscustomer/views/instructionlist.html
+++ b/app/22busscustomer/views/instructionlist.html
@@ -3,10 +3,9 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
-                  <label for="inputLottry" class="control-label">说明列表</label>
                   <button type="button" class="btn btn-primary search pull-right" ng-click="addinstruction()">添加说明</button>
-                  <input type="text" class="form-control" ng-model="somepara.title_identifier" placeholder="标识">&nbsp;&nbsp;
-                  <input type="text" class="form-control" ng-model="somepara.title" placeholder="标题">&nbsp;&nbsp;
+                  <input type="text" class="form-control" ng-model="somepara.title_identifier" placeholder="说明标识">&nbsp;&nbsp;
+                  <input type="text" class="form-control" ng-model="somepara.title" placeholder="说明标题">&nbsp;&nbsp;
                   <button type="button" class="btn btn-primary" ng-click="search()">搜索</button>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
         </div>
@@ -17,16 +16,22 @@
     <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-4 text-center">说明标识</th>
+        <th class="col-md-3 text-center">说明标识</th>
         <th class="col-md-4 text-center">说明标题</th>
+        <th class="col-md-2 text-center">类型</th>
         <!-- <th class="col-md-3 text-center">说明内容</th> -->
-        <th class="col-md-4 text-center">操作</th>
+        <th class="col-md-3 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.title_identifier}}</td>
         <td class="text-center">{{obj.title}}</td>
+        <td class="text-center">
+          <span ng-show="obj.type==0">常见问题</span>
+          <span ng-show="obj.type==1">其他</span>
+          <span ng-show="obj.type==2">分类问题</span>
+        </td>
         <!-- <td class="col-md-3 text-center">{{obj.explain_content}}</td> -->
         <td class="text-center">
           <a ng-click="change(obj.id)" class="btn btn-info btn-xs">修改</a>
