--- a/app/22busscustomer/views/hotsearch.html
+++ b/app/22busscustomer/views/hotsearch.html
@@ -41,7 +41,7 @@
         </td>
         
         <td class="text-center">
-          <a ng-click="change(obj.id)" class="btn btn-info btn-xs">修改</a>
+          <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">修改</a>
           <a ng-click="delete(obj.id)" class="btn btn-info btn-xs">删除</a>
         </td>
       </tr>
