添加热搜跳页

--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -23,6 +23,18 @@
 					<br/>
 				<div class="col-xs-12 form-group" >
 					<div class="col-xs-2">
+						<label for="lrl" class="pull-right text-right mt10">标签&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-8">					
+						<input type="text" class="form-control" placeholder="标签之间请以逗号分隔开"
+							ng-model="salefrobj.label">
+					</div>
+				</div>
+			
+					<br/>
+					<br/>
+				<div class="col-xs-12 form-group" >
+					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">利润率&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
 					<div class="col-xs-8">
