--- a/app/22busscustomer/views/dictionaryinfo.html
+++ b/app/22busscustomer/views/dictionaryinfo.html
@@ -53,6 +53,15 @@
 						</div>
 
 						<div class="form-group">
+							<label for="inputDate" class="col-sm-4 control-label">URL</label>
+							<div class="col-md-6">
+								<input type="text" class="form-control" id="inputpoolname" placeholder=""
+									ng-model="info.url"
+								>
+							</div>
+						</div>
+
+						<div class="form-group">
 							<label for="inputDate" class="col-sm-4 control-label">排序</label>
 							<div class="col-md-6">
 								<input type="text" class="form-control" id="inputpoolname" placeholder=""
