--- a/app/22busscustomer/views/hotsearch.html
+++ b/app/22busscustomer/views/hotsearch.html
@@ -3,14 +3,14 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
-                  <input type="text" class="form-control" ng-model="info.value" placeholder="热搜名词">
+                  <!--<input type="text" class="form-control" ng-model="info.value" placeholder="热搜名词">
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <select class="form-control" ng-model="info.type" ng-change="selection(info.type)">
                     <option value="">请选择</option>
                     <option value="1">义买义卖</option>
                     <option value="3">积分商城</option>  
                     <option value="4">宜买宜卖</option>
-                    </select>
+                    </select>-->
                   <div class="form-group pull-right">
                       <button type="button" class="btn btn-primary" ng-click="add()">添加热搜</button>
                       &nbsp;&nbsp;&nbsp;&nbsp;
