--- a/app/07product/views/splist.html
+++ b/app/07product/views/splist.html
@@ -27,8 +27,8 @@
         <th class="col-md-5 text-center">产品</th>
         <th class="col-md-2 text-center">产品分类</th>
         <th class="col-md-1 text-center">产品状态</th>
-        <th class="col-md-2 text-center">排序</th>
-        <th class="col-md-2 text-center">操作</th>
+        <!--<th class="col-md-2 text-center">排序</th>-->
+        <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
@@ -42,7 +42,7 @@
         <td class="text-center">{{obj.state_name}}<br/>
           <span ng-show="obj.sale_apply_state_name != ''" ng-bind="obj.sale_apply_state_name"></span>
         </td>
-        <td class="form-horizontal ">
+        <!--<td class="form-horizontal ">
           <div class="col-sm-6">
             <input class="form-control input-sm" 
             style="height:22px;" 
@@ -51,15 +51,15 @@
             ng-model="obj.asort">
           </div>
           <a ng-click="asort(obj.id, obj.asort)" class="btn btn-info btn-xs">gogo</a> 
-        </td>
+        </td>-->
         <td class="text-center">
           <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">下架</a>
-          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">上架</a>
-          <a ng-click="edit(obj.id)" ng-show="obj.state=='0' || obj.state == '2'" class="btn btn-success btn-xs">编辑</a>
-          <a ng-click="del(obj.id)" ng-show="obj.state=='0' || obj.state == '2'" class="btn btn-danger btn-xs">删除</a>
+          <a ng-show="(obj.state=='0' || obj.state=='2') && obj.sale_apply_state != 'apply_sale'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">申请上架</a>
+          <a ng-click="edit(obj.id)" ng-show="(obj.state=='0' || obj.state == '2') && obj.sale_apply_state != 'apply_sale'" class="btn btn-success btn-xs">编辑</a>
+          <a ng-click="del(obj.id)" ng-show="(obj.state=='0' || obj.state == '2') && obj.sale_apply_state != 'apply_sale'" class="btn btn-danger btn-xs">删除</a>
           <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
           <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
-          <a ng-click="info(obj.id)" ng-show="obj.state == '1'" class="btn btn-warning btn-xs">详情</a>
+          <a ng-click="info(obj.id)" ng-show="obj.state == '1' || obj.sale_apply_state == 'apply_sale'" class="btn btn-warning btn-xs">详情</a>
           <a ng-click="distribution(obj.code, obj.sale_target_type)" class="btn btn-default btn-xs"
           ng-show="obj.sale_target_type == 1"
           >分配经销商</a>
