商户信息创建和修改用一个接口

--- a/app/22busscustomer/views/addhotsearch.html
+++ b/app/22busscustomer/views/addhotsearch.html
@@ -36,6 +36,15 @@
                             </select>
                         </div>    
                     </div>
+
+					<div class="form-group">
+                        <label for="inputDate" class="col-md-3 control-label">排序因子</label>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="请输入排序因子"
+							ng-model="info.asort"
+							>
+                        </div>    
+                    </div>
 					
 
 				</div>
