--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -3,54 +3,70 @@
 	<div class="col-xs-12 col-md-12 mt10">
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">销售品名称</label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">产品名称</label>
+			<div class="col-sm-6 col-xs-12">
 				<input type="text" class="form-control" placeholder="请输入销售品名称" ng-disabled="model.id != undefined || util.what == 'info'"
 				 ng-model="saleobj.name">
+			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">此名称用于产品列表及订单名称</font>
 			</div>
 		</div>
 
 		<div class="form-group" ng-if="saleobj.code != ''">
-			<label class="col-sm-3 col-xs-12 control-label">销售品编号</label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">产品编码</label>
+			<div class="col-sm-6 col-xs-12">
 				<p class="form-control-static">{{saleobj.code}}</p>
+			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">产品编码</font>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">市场价格</label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">市场价格</label>
+			<div class="col-sm-6 col-xs-12">
 				<div class="input-group">
 					<span class="input-group-addon">¥</span>
 					<input type="number" class="form-control" placeholder="请输入市场价格" min='0' ng-model="saleobj.market_price" ng-disabled="util.what == 'info'">
 				</div>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger"></font>
+			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">居游价格</label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">居游价格</label>
+			<div class="col-sm-6 col-xs-12">
 				<div class="input-group">
 					<span class="input-group-addon">¥</span>
 					<input type="number" class="form-control" placeholder="请输入居游价格" min='0' ng-model="saleobj.guide_price" ng-disabled="util.what == 'info'">
 				</div>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">下单支付价格</font>
+			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">分销商成本价格</label>
-			<div class="col-sm-9 col-xs-12">
+			<!--<label class="col-sm-3 col-xs-12 control-label">分销商成本价格</label>-->
+			<label class="col-sm-2 col-xs-12 control-label">成本价格</label>
+			<div class="col-sm-6 col-xs-12">
 				<div class="input-group">
 					<span class="input-group-addon">¥</span>
 					<input type="number" class="form-control" placeholder="请输入分销商成本价格" min='0' ng-model="saleobj.cost_price" ng-disabled="util.what == 'info'">
 				</div>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger"></font>
+			</div>
 		</div>
 
 		<!-- ng-disabled="saleobj.id != ''" ng-change="changeCategory()" -->
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">销售品分类</label>
-			<div class="col-sm-9  col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">产品分类</label>
+			<div class="col-sm-6  col-xs-12">
 				<ui-select ng-model="saleobj.sale_category" theme="bootstrap" ng-disabled="saleobj.id != '' || util.what == 'info'">
 					<ui-select-match placeholder="请选择一个销售品分类">{{$select.selected.label}}</ui-select-match>
 					<ui-select-choices repeat="item.value as item in page.categorylist | filter: $select.search">
@@ -58,20 +74,27 @@
 					</ui-select-choices>
 				</ui-select>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">产品类别</font>
+			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">排序因子</label>
-			<div class="col-sm-9 col-xs-12">
-				<input type="text" class="form-control" placeholder="请输入排序因子" ng-disabled="model.id != undefined || util.what == 'info'"
+		<div class="form-group" ng-show="util.what == 'info'">
+			<label class="col-sm-2 col-xs-12 control-label">显示顺序子</label>
+			<div class="col-sm-6 col-xs-12">
+				<input type="text" class="form-control" placeholder="请输入显示顺序" ng-disabled="model.id != undefined || util.what == 'info'"
 				 ng-model="saleobj.asort">
+			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">在产品列表中显示顺序</font>
 			</div>
 		</div>
 
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">短信发送类型</label>
-			<div class="col-sm-9 col-xs-12">
+			<!--<label class="col-sm-3 col-xs-12 control-label">短信发送类型</label>-->
+			<label class="col-sm-2 col-xs-12 control-label">发送类型</label>
+			<div class="col-sm-6 col-xs-12">
 				<label class="radio-inline">
 				  <input type="radio" name="sms_type" value="1"
 				  ng-model="saleobj.sms_type"
@@ -83,30 +106,41 @@
 				  > 不发短信
 				</label>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">下单出票之后是否发送短信</font>
+			</div>
 		</div>
 
 		<div class="form-group" ng-show="saleobj.sms_type == 1">
-			<label class="col-sm-3 col-xs-12 control-label">短信模板编号</label>
-			<div class="col-sm-9 col-xs-12">
+			<!--<label class="col-sm-3 col-xs-12 control-label">短信模板编号</label>-->
+			<label class="col-sm-2 col-xs-12 control-label">模板编号</label>
+			<div class="col-sm-6 col-xs-12">
 				<select class="form-control" ng-model="saleobj.sms_template_id" ng-change="changeSms(saleobj)" ng-disabled="util.what == 'info'"
 				 ng-options="sms.sms_template_id as sms.sms_template_id for sms in page.smslist">
 	            	<option value="">  -- 空 --  </option>
 	            </select>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">发送短信内容模板</font>
+			</div>
 		</div>
 
 		<div class="form-group" ng-show="saleobj.sms_type == 1">
-			<label class="col-sm-3 col-xs-12 control-label">短信追加内容</label>
-			<div class="col-sm-9 col-xs-12">
+			<!--<label class="col-sm-3 col-xs-12 control-label">短信追加内容</label>-->
+			<label class="col-sm-2 col-xs-12 control-label">补充内容</label>
+			<div class="col-sm-6 col-xs-12">
 				<textarea class="form-control" rows="3" ng-model="saleobj.sms_diy" ng-disabled="util.what == 'info'"></textarea>
+			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">短信补充自定义内容</font>
 			</div>
 		</div>
 
 
 		<!-- ng-disabled="saleobj.state != 0 && saleobj.id != ''" -->
 		<div class="form-group mt10">
-			<label class="col-sm-3 col-xs-12 control-label">产品所属</label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">产品所属</label>
+			<div class="col-sm-6 col-xs-12">
 				<ui-select ng-model="saleobj.sale_belong" theme="bootstrap" ng-disabled="util.what == 'info'">
 					<ui-select-match placeholder="请选择一个产品所属">{{$select.selected.label}}</ui-select-match>
 					<ui-select-choices repeat="item.value as item in page.salebelonglist | filter: $select.search">
@@ -114,41 +148,49 @@
 					</ui-select-choices>
 				</ui-select>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">非自营为接口对接产品</font>
+			</div>
 		</div>
 		<div class="form-group">
 			<form class="form-inline">
-				<label class="col-sm-3 col-xs-12 control-label">有效期</label>&nbsp;&nbsp;
-				<div class="input-group">
-					<input type="text" class="form-control" ng-model="baseinfo.dateshow.periodstart.date" uib-datepicker-popup="yyyy-MM-dd" is-open="baseinfo.dateshow.periodstart.opened"
-					 ng-required="true" close-text="Close" readonly/>
-					<span class="input-group-btn">
+				<label class="col-sm-2 col-xs-12 control-label">有效期限</label>&nbsp;&nbsp;
+				<div class="col-sm-6">
+					<div class="input-group">
+						<input type="text" class="form-control" ng-model="baseinfo.dateshow.periodstart.date" uib-datepicker-popup="yyyy-MM-dd" is-open="baseinfo.dateshow.periodstart.opened"
+						 ng-required="true" close-text="Close" readonly/>
+						<span class="input-group-btn">
+								<button type="button" 
+									class="btn btn-default"
+									ng-click="baseinfo.dateshow.open(baseinfo.dateshow.periodstart)">
+								<i class="glyphicon glyphicon-calendar"></i>
+							</button>
+						</span>
+					</div>
+					&nbsp;&nbsp;至&nbsp;&nbsp;
+					<div class="input-group">
+						<input type="text" class="form-control" ng-model="baseinfo.dateshow.periodend.date" uib-datepicker-popup="yyyy-MM-dd" is-open="baseinfo.dateshow.periodend.opened"
+						 ng-required="true" close-text="Close" readonly/>
+						<span class="input-group-btn">
 							<button type="button" 
-								class="btn btn-default"
-								ng-click="baseinfo.dateshow.open(baseinfo.dateshow.periodstart)">
-							<i class="glyphicon glyphicon-calendar"></i>
-						</button>
+									class="btn btn-default" 
+									ng-click="baseinfo.dateshow.open(baseinfo.dateshow.periodend)">
+								<i class="glyphicon glyphicon-calendar"></i>
+							</button>
 					</span>
-				</div>
-				&nbsp;&nbsp;至&nbsp;&nbsp;
-				<div class="input-group">
-					<input type="text" class="form-control" ng-model="baseinfo.dateshow.periodend.date" uib-datepicker-popup="yyyy-MM-dd" is-open="baseinfo.dateshow.periodend.opened"
-					 ng-required="true" close-text="Close" readonly/>
-					<span class="input-group-btn">
-						<button type="button" 
-                    			class="btn btn-default" 
-                    			ng-click="baseinfo.dateshow.open(baseinfo.dateshow.periodend)">
-                    		<i class="glyphicon glyphicon-calendar"></i>
-                    	</button>
-                  </span>
-				</div>
+					</div>
 			</form>
 			&nbsp;&nbsp;&nbsp;&nbsp;
+			</div>
+			<div class="col-sm-4">
+				<font face="Courier" class="text-danger">产品可用时间范围</font>
+			</div>
 		</div>
 
 
 		<div class="form-group">
-			<label class="col-sm-3 col-xs-12 control-label">系统确认</label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label">系统确认</label>
+			<div class="col-sm-6 col-xs-12">
 				<label class="radio-inline">
 				  <input type="radio" name="sys_affirm_type" value="0"
 				  ng-model="saleobj.sys_affirm_type" ng-disabled="util.what == 'info'" 
@@ -160,13 +202,19 @@
 				  > 无需确认
 				</label>
 			</div>
+			<div class="col-sm-4 mt10">
+				<font face="Courier" class="text-danger">对接产品需要到第三方系统下单，请选择需要确认</font>
+			</div>
 		</div>
 
 
 		<div class="form-group" ng-if="util.what == 'edit'">
-			<label class="col-sm-3 col-xs-12 control-label"></label>
-			<div class="col-sm-9 col-xs-12">
+			<label class="col-sm-2 col-xs-12 control-label"></label>
+			<div class="col-sm-6 col-xs-12">
 				<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="save()">保存</button>
+			</div>
+			<div class="col-sm-4">
+
 			</div>
 		</div>
 
