--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -5,7 +5,7 @@
 </style>
 
 <div class="col-sm-12" style="background: #fff; padding-top: 15px;">
-    <uib-tabset active="activeForm">
+    <uib-tabset active="activeForm" class="nav nav-tabs nav-justified">
 
       <uib-tab index="0" heading="基本信息">
         <productbaseinfo
