--- a/app/07product/views/restrictrule.html
+++ b/app/07product/views/restrictrule.html
@@ -1,13 +1,11 @@
 <div class="container-fluid form-horizontal">
 
-	<div class="col-xs-12 col-md-12 mt10" >
+	<div class="col-xs-12 col-md-12 mt10">
 
-		
-			
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">支付类型</label>
-		    <div class="col-sm-9 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">支付类型</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="pay_type" value="0"
 				  ng-model="saleobj.pay_type" ng-disabled="util.what == 'info'" 
 				  > 其他方式支付
@@ -17,13 +15,18 @@
 				  ng-model="saleobj.pay_type"
 				  > 预存支付
 				</label>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					预存支付：平台预存支付；其他方式支付：微信、支付宝支付
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">库存类型</label>
-		    <div class="col-sm-2 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">库存类型</label>
+			<div class="col-sm-3 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="stock_type" value="0"
 				  ng-model="saleobj.stock_type" ng-disabled="util.what == 'info'" 
 				  > 不启用
@@ -33,17 +36,21 @@
 				  ng-model="saleobj.stock_type"
 				  > 启用
 				</label>
-		    </div>
-		    <div class="col-sm-2 col-xs-12" ng-show="saleobj.stock_type == 1">
-		    	<input type="number" class="form-control" placeholder="预存数量" min='0' ng-model="saleobj.current_stock_num"
-					>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-3 col-xs-12" ng-show="saleobj.stock_type == 1">
+				<input type="number" class="form-control" placeholder="预存数量" min='0' ng-model="saleobj.current_stock_num">
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					是否启用库存
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">销售目标</label>
-		    <div class="col-sm-9 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">销售目标</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="sale_target_type" value="0"
 				  ng-model="saleobj.sale_target_type" ng-disabled="util.what == 'info'"
 				  > 公开销售
@@ -53,50 +60,58 @@
 				  ng-model="saleobj.sale_target_type"
 				  > 独立授权销售
 				</label>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					公开销售：默认所有分销商可见，可设置分销商不可见<br/>
+					授权销售：默认所有分销商不可见，可设置分销商可见
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">生效时间</label>
-		    <div class="col-sm-5 col-xs-12">
-		    	<select class="form-control" 
-		    	  ng-model="saleobj.take_effect_type"  ng-disabled="util.what == 'info'" 
-	              ng-options="take_effect_type.value as take_effect_type.name for take_effect_type in page.take_effect_typearr"
-	            >
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">生效时间</label>
+			<div class="col-sm-6 col-xs-12">
+				<select class="form-control" ng-model="saleobj.take_effect_type" ng-disabled="util.what == 'info'" ng-options="take_effect_type.value as take_effect_type.name for take_effect_type in page.take_effect_typearr">
 	            </select>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					支付成功后何时可以使用
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">最大购买数量限制</label>
-		    <div class="col-sm-2 col-xs-12">
-		    	<input type="number" class="form-control" 
-				ng-model="saleobj.max_limit"  ng-disabled="util.what == 'info'" 
-				>
-				
-		    </div>
-		    <div class="col-sm-5 col-xs-12">
-		      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
-		    </div>
-	  	</div>
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">最大限制</label>
+			<div class="col-sm-6 col-xs-12">
+				<input type="number" class="form-control" ng-model="saleobj.max_limit" ng-disabled="util.what == 'info'">
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">每单最大购买数量限制</label>
-		    <div class="col-sm-2 col-xs-12">
-		    	<input type="number" class="form-control" 
-				ng-model="saleobj.order_num_limit"  ng-disabled="util.what == 'info'" 
-				>
-				
-		    </div>
-		    <div class="col-sm-5 col-xs-12">
-		      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					用户累积购买数量限制，0:不限，其他数字:限制购买个数
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">是否启用出游时间</label>
-		    <div class="col-sm-2 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">每单限制</label>
+			<div class="col-sm-6 col-xs-12">
+				<input type="number" class="form-control" ng-model="saleobj.order_num_limit" ng-disabled="util.what == 'info'">
+
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					用户每次下单购买数量限制，0:不限，其他数字:限制购买个数
+				</p>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">出游时间</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="tour_date_type" value="0"
 				  ng-model="saleobj.tour_date_type"  ng-disabled="util.what == 'info'"
 				  > 不启用
@@ -106,17 +121,18 @@
 				  ng-model="saleobj.tour_date_type"
 				  > 启用
 				</label>
-		    </div>
-		    <div class="col-sm-7 col-xs-12">
-		      <p class="form-control-static text-danger" >
-		      启用出游时间后，该销售品只能在出游日期当天使用</p>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					启用出游时间后，该销售品只能在出游日期当天使用，否则有效期内均可使用
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">是否允许退票</label>
-		    <div class="col-sm-9 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">允许退票</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="back_type" value="0"
 				  ng-model="saleobj.back_type" ng-disabled="util.what == 'info'"
 				  > 允许
@@ -126,13 +142,18 @@
 				  ng-model="saleobj.back_type"
 				  > 不允许
 				</label>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					是否允许退票
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">退票审核</label>
-		    <div class="col-sm-9 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">退票审核</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="apply_state" value="0"
 				  ng-model="saleobj.apply_state" ng-disabled="util.what == 'info'"
 				  > 不需要
@@ -142,13 +163,18 @@
 				  ng-model="saleobj.apply_state"
 				  > 需要
 				</label>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					退票是否需要运营商审核
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">是否出票</label>
-		    <div class="col-sm-2 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">是否出票</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="ticket_type" value="0"
 				  ng-model="saleobj.ticket_type" ng-disabled="util.what == 'info'"
 				  > 出票
@@ -158,17 +184,18 @@
 				  ng-model="saleobj.ticket_type"
 				  > 不出票
 				</label>
-		    </div>
-		    <div class="col-sm-7 col-xs-12">
-		      <p class="form-control-static text-danger" >
-		      该选项请慎重使用，如果选择’不出票‘该销售品将不会出票也不发短信！</p>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">是否实名制</label>
-		    <div class="col-sm-9 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">实名限制</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="user_status" value="0"
 				  ng-model="saleobj.user_status" ng-disabled="util.what == 'info'"
 				  > 不实名制
@@ -178,13 +205,18 @@
 				  ng-model="saleobj.user_status"
 				  > 实名制
 				</label>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					购买时是否要求为居游实名制会员
+				</p>
+			</div>
+		</div>
 
-	  	<div class="form-group">
-		    <label class="col-sm-3 col-xs-12 control-label">短信票码类型</label>
-		    <div class="col-sm-9 col-xs-12">
-		    	<label class="radio-inline">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">票码类型</label>
+			<div class="col-sm-6 col-xs-12">
+				<label class="radio-inline">
 				  <input type="radio" name="sms_ticketcode_type" value="0"
 				  ng-model="saleobj.sms_ticketcode_type" ng-disabled="util.what == 'info'"
 				  > 票码
@@ -194,15 +226,23 @@
 				  ng-model="saleobj.sms_ticketcode_type"
 				  > 订单唯一码
 				</label>
-		    </div>
-	  	</div>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					票码：每码只能核销一次，订单唯一码：一单一码，可核销多次
+				</p>
+			</div>
+		</div>
 
 		<div class="form-group" ng-if="util.what == 'edit'">
-			<label class="col-sm-3 col-xs-12 control-label"></label>
-			<div class="col-sm-9 col-xs-12">
-				<button type="button" class="btn btn-primary btn-lg btn-block"
-				ng-click="save()"
-				>保存</button>
+			<label class="col-sm-2 col-xs-12 control-label"></label>
+			<div class="col-sm-6 col-xs-12">
+				<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="save()">保存</button>
+			</div>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static text-danger">
+					
+				</p>
 			</div>
 		</div>
 
